--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   intl: ^0.15.7
+  audioplayers: ^0.7.8
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +37,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/sound_alarm.mp3
 
   # To add assets to your application, add an assets section, like this:
   # assets:
