--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   intl: ^0.15.7
   audioplayers: ^0.7.8
+  flutter_local_notifications: ^0.3.9
 
 dev_dependencies:
   flutter_test:
