--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   intl: ^0.15.7
   audioplayers: ^0.7.8
   flutter_local_notifications: ^0.3.9
+  shared_preferences: ^0.4.3
 
 dev_dependencies:
   flutter_test:
