--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.google.gms:google-services:4.0.1'
     }
 }
 
@@ -22,6 +23,13 @@ subprojects {
 }
 subprojects {
     project.evaluationDependsOn(':app')
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'com.android.support' ) {
+                details.useVersion "27.1.0"
+            }
+        }
+    }
 }
 
 task clean(type: Delete) {
