--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   audioplayers: ^0.7.8
   flutter_local_notifications: ^0.3.9
   shared_preferences: ^0.4.3
+  firebase_core: ^0.2.5+1
+  firebase_analytics: ^1.0.5
 
 dev_dependencies:
   flutter_test:
