--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ description: Simple flutter application for tracking work time with pomodoro tec
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.2.0-dev.68.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -18,19 +18,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  intl: ^0.15.7
-  audioplayers: ^0.7.8
-  flutter_local_notifications: ^0.3.9
-  shared_preferences: ^0.4.3
-  firebase_core: ^0.2.5+1
-  firebase_analytics: ^1.0.5
+  cupertino_icons: ^0.1.3
+  intl: ^0.16.0
+  audioplayers: ^0.14.0
+  flutter_local_notifications: ^1.2.2
+  shared_preferences: ^0.5.6+3
+  firebase_core: ^0.4.4+2
+  firebase_analytics: ^5.0.11
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_driver:
     sdk: flutter
+  test: any
 
 
 # For information on the generic Dart part of this file, see the
