--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
+    ext.kotlin_version = '1.3.72'
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -23,13 +24,6 @@ subprojects {
 }
 subprojects {
     project.evaluationDependsOn(':app')
-    project.configurations.all {
-        resolutionStrategy.eachDependency { details ->
-            if (details.requested.group == 'com.android.support' ) {
-                details.useVersion "27.1.0"
-            }
-        }
-    }
 }
 
 task clean(type: Delete) {
