--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   audioplayers: ^0.14.0
   flutter_local_notifications: ^1.2.2
   shared_preferences: ^0.5.6+3
-  firebase_core: ^0.4.4+2
+  firebase_core: ^0.4.4
   firebase_analytics: ^5.0.11
 
 dev_dependencies:
@@ -44,6 +44,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/sound_alarm.mp3
+    - assets/bg.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
