--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   intl: ^0.16.0
-  audioplayers: ^0.14.0
+  audioplayers: ^0.15.1
   flutter_local_notifications: ^1.2.2
   shared_preferences: ^0.5.6+3
   firebase_core: ^0.4.4
   firebase_analytics: ^5.0.11
+  sqflite: ^1.3.0+1
+  pedantic: ^1.9.0
 
 dev_dependencies:
   flutter_driver:
