--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   audioplayers: ^0.15.1
   flutter_local_notifications: ^1.2.2
   shared_preferences: ^0.5.6+3
-  firebase_core: ^0.4.4
+  firebase_core: ^0.4.4+3
   firebase_analytics: ^5.0.11
   sqflite: ^1.3.0+1
   pedantic: ^1.9.0
