--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  font_awesome_flutter: ^8.8.1
   intl: ^0.16.0
   audioplayers: ^0.15.1
-  flutter_local_notifications: ^1.2.2
+  flutter_local_notifications: ^1.4.3
   shared_preferences: ^0.5.6+3
   firebase_core: ^0.4.4+3
   firebase_analytics: ^5.0.11
